# Aroma_Agents_ADK_Project_Github

./: README.md  pyproject.toml  requirements.txt
Aroma_Agents/: .envSample  agent.py
Aroma_Agents/sub_agents/compound_searcher/: agent.py  prompt.py
Aroma_Agents/sub_agents/intent_parser/: agent.py  prompt.py
Aroma_Agents/sub_agents/mental_support/: agent.py  prompt.py
Aroma_Agents/sub_agents/music/: agent.py  prompt.py
Aroma_Agents/sub_agents/plant_mapper/: agent.py  prompt.py
Aroma_Agents/sub_agents/recommender/: agent.py  prompt.py
Aroma_Agents/tools/: music_tool.py  tts_tool.py
Aroma_Agents/utils/: config.py  gemini_tts_generator.py
